--- a/lightninggridlotteryback/docker/docker-compose.yml
+++ b/lightninggridlotteryback/docker/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 services:
 
   db:
-    image: mariadb
+    image: mariadb:10.4.12
     container_name: db
     restart: always
     environment:
@@ -22,4 +22,3 @@ services:
       - '3306:3306'
     volumes:
       - findSatoshi_db_data:/var/lib/mysql
-      
