--- a/lightninggridlotteryback/src/main/resources/application.yml
+++ b/lightninggridlotteryback/src/main/resources/application.yml
@@ -45,7 +45,7 @@ logging:
 spring:
   profiles: development
   datasource:
-    url: jdbc:mariadb://localhost:3306/findSatoshi
+    url: jdbc:mariadb://172.23.122.186:3306/findSatoshi
     username: findSatoshi
     password: findSatoshi
     driver-class-name: org.mariadb.jdbc.Driver
