--- a/lightninggridlotteryback/src/main/resources/application.yml
+++ b/lightninggridlotteryback/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     username: findSatoshi
     password: findSatoshi
     driver-class-name: org.mariadb.jdbc.Driver
+    initialization-mode: never
   jpa:
     hibernate:
       ddl-auto: validate #create-drop
@@ -18,6 +19,8 @@ server:
 logging:
   level:
     root: INFO
+find-satoshi:
+  url: ${findSatoshiUrl}
 ---
 
 spring:
@@ -27,6 +30,7 @@ spring:
     username: findSatoshi
     password: findSatoshi
     driver-class-name: org.mariadb.jdbc.Driver
+    initialization-mode: never
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -40,15 +44,18 @@ server:
 logging:
   level:
     root: INFO
+find-satoshi:
+  url: http://19beb3e8.ngrok.io
 ---
 
 spring:
   profiles: development
   datasource:
-    url: jdbc:mariadb://172.23.122.186:3306/findSatoshi
+    url: jdbc:mariadb://localhost:3306/findSatoshi
     username: findSatoshi
     password: findSatoshi
     driver-class-name: org.mariadb.jdbc.Driver
+    initialization-mode: always
   jpa:
     hibernate:
       ddl-auto: create-drop #validate #create-drop #validate 
@@ -56,9 +63,11 @@ spring:
     enabled: false
     baselineOnMigrate: false
 server:
-  port: 8082
+  port: 8081
   servlet:
-    context-path: /findSatoshi	
+    context-path: /findSatoshi
 logging:
   level:
     root: DEBUG
+find-satoshi:
+  url: http://19beb3e8.ngrok.io/
