--- a/lightninggridlotteryback/src/main/resources/application.yml
+++ b/lightninggridlotteryback/src/main/resources/application.yml
@@ -21,6 +21,27 @@ logging:
     root: DEBUG
 find-satoshi:
   url: http://e59c9cea.ngrok.io
+
+---
+
+spring:
+  profiles: test
+  flyway:
+    enabled: false
+    baselineOnMigrate: false
+server:
+  port: 8081
+  servlet:
+    context-path: /findSatoshi
+logging:
+  level:
+    root: DEBUG
+find-satoshi:
+  url: http://bb7146414466.ngrok.io/
+  success-url: localhost:4200
+  open-node: b95d29ac-4ce9-45c9-ab9e-8767b35a01de
+
+
 ---
 
 spring:
