--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,5 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Test with Maven
+      run: mvn -B test --file lightninggridlotteryback/pom.xml
     - name: Build with Maven
-      run: mvn -B package --file lightninggridlotteryback/pom.xml
+      run: mvn -B package -DskipTests --file lightninggridlotteryback/pom.xml
