--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,5 @@ jobs:
       run: mvn -B test --file lightninggridlotteryback/pom.xml
     - name: Build with Maven
       run: mvn -B package -DskipTests --file lightninggridlotteryback/pom.xml
+    - name: Build the Docker image
+      run: docker build . --file lightninggridlotteryback/Dockerfile --tag my-image-name:$(date +%s)
